--- a/index.html
+++ b/index.html
@@ -731,6 +731,33 @@
 			</section>
 			<!-- End Generic Start -->
 			
+			<!-- Start gallery Area -->
+			<section class="gallery-area pt-100" id="about">
+				<div class="container-fluid">
+					<div class="row headz justify-content-center">
+						<div class="col-lg-8">
+							<h1>DISCLAIMER!!!</h1>
+							<p style="color:black; font-size: 16px">
+								This material is a compilation from different sources.<br> The compiler claims no autorship on it. sources are indicated in the 
+								references.<br> Photo are downloaded from the internet and are credited to the owner.
+								<br>JHCSC-SET shall not be held any responsibility for any legal problems on this material.
+							</p>							
+						</div>
+					</div>
+					<div class="row no-padding">
+						<div class="single-gallery active-gallery-carusel">
+							<img class="item" src="img/g1.jpg" alt="">
+							<img class="item" src="img/g2.jpg" alt="">
+							<img class="item" src="img/g3.jpg" alt="">
+							<img class="item" src="img/g4.jpg" alt="">
+							<img class="item" src="img/g5.jpg" alt="">
+							<img class="item" src="img/g6.jpg" alt="">
+						</div>
+					</div>
+				</div>	
+			</section>
+			<!-- End gallery Area -->
+			
 			
 			
 			<!-- Start gallery Area -->
